# REST-APIs-Fortbildung

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
python/src/messageboard/: __init__.py  authentication.py  errors.py  main.py  messages.py  token.py
quarto/: _quarto.yml  cheatsheet.qmd  index.qmd
quarto/board/: _board.qmd  index.qmd
quarto/board/public/: index.qmd
quarto/openapi/: index.qmd  openapi.json
quarto/presentation/: 01-curl.qmd  01-http-grundlagen.qmd  02-rest-prinzipien.qmd  03-auth.qmd  04-openapi.qmd  04-prax-hoppscotch.qmd  05-caching.qmd  _metadata.yml  custom.css  custom.scss  index.qmd  xx-ausblick.qmd
